--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
 	<title>Kittu Bakers </title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link href="aos.css" rel="stylesheet">
       <link href="all.min.css"> 
 	  <script src="sweetalert2.min.js"></script>
